# Daydream-cli

./: .gitignore  CHANGELOG.md  README.md  install.sh  pyproject.toml  uninstall.sh
src/daydream/: __init__.py  __main__.py  chat.py  cli.py  config.py  dreaming.py  engine.py  interactive.py  links.py  models.py  profiles.py  registry.py  server.py  speculative.py  storage.py  utils.py
tests/: test_auto_pull.py  test_chat.py  test_cli.py  test_config.py  test_dreaming.py  test_engine.py  test_local_registry.py  test_models.py  test_profiles.py  test_registry.py  test_server.py  test_server_detach.py  test_speculative.py  test_storage.py  test_utils.py  test_utils_daydreaming.py
