[project]
name = "daydream"
version = "0.1.4"
description = "Apple Silicon local model CLI — Ollama UX, MLX engine"
requires-python = ">=3.14"
dependencies = [
    "mlx-lm>=0.31.0",
    "click>=8.1",
    "huggingface-hub>=0.20",
    "pyyaml>=6.0",
    "rich>=13.0",
]

[project.scripts]
daydream = "daydream.cli:cli"

[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
where = ["src"]
